--- a/ulits/_general.scss
+++ b/ulits/_general.scss
@@ -4,25 +4,65 @@
   box-sizing: border-box;
 }
 
-body{
-    font-family: 'Josefin Sans',
-        sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-weight: 400;
-      line-height: 1.5;
-      font-style: normal;
-      font-size: 16px;
+
+
+
+
+body {
+  font-family: 'Josefin Sans',
+    sans-serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  font-style: normal;
+  font-size: 16px;
 }
 
-:root{
+:root {
   font-size: 62.5%;
 }
 
-body{
+body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
 }
 
-.main{
+.main {
   flex: 2 1 auto;
+}
+
+.skip-link {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50% ;
+  color: #5956E9;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: normal;
+    padding: 12px 6px;
+    display: block;
+    border-radius: 3px;
+    background: #ffffff;
+    margin-right: 3px;
+  transform: translateY(-100%);
+  z-index: 2;
+  transition: all .3s linear;
+}
+
+.skip-link:focus {
+  transform: translateY(20%);
+  border: none;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
