--- a/css/form.css
+++ b/css/form.css
@@ -5,3 +5,9 @@
 .footer__wrapper{
   padding-top: 50px;
 }
+
+input[type="email"].news__input-text {
+  border: none;
+  border-radius: 4px;
+  padding: 0;
+}
