--- a/blocks/_features.scss
+++ b/blocks/_features.scss
@@ -2,7 +2,7 @@
 
 .features {
   background: url(../img/features__bg.jpg), lightgray 50% / cover no-repeat;
-  background-repeat-x: no-repeat;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
